# particle-swarm-optimization

./: README.md  main.py  pyproject.toml
src/: benchmarks.py  config.py  create_animation.py  pso.py  run_pso.py
